fix feature ordering on narrow screen

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ body {
 
 .h-feature {
     margin-top: 0px;
+    font-weight: bold;
 }
 
 .h-about {
